v8.2 corrección inconsistencias